--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/backend/node_modules
+
+# docker stuff, will expriment differently 
+.dockerignore
+compose.yaml
+Dockerfile
